testsuite/poke.pkl/in-diag-3.pk
/* { dg-do compile } */

var foo = 10 in ["a","b","c"]; /* { dg-error "wrong type.*expected string" } */
